<resources>
    <string name="app_name">Yeshivat HaHesder Tsfat</string>

    <!-- App Related Info -->
    <string name="channel_id" translatable="false">UC5DnLKHtfzr7YG7KH7DtFMw</string>
    <string name="store_url" translatable="false">https://yhtsfat.org.il/</string>
    <string name="text_app_desc">Bait Midrash for Tora and Tefila</string>
    <string name="text_website_url" translatable="false">https://yhtsfat.org.il/</string>
    <string name="text_google_play_developer_id" translatable="false">00000000000000000000</string>
    <string name="text_google_play_developer_name" translatable="false">Yeshivat HaHesder Tsfat</string>
    <string name="text_contact_email" translatable="false">noam@tsfat.org.il</string>
    <string name="text_app_feedback_email_subject">Feedback - Yeshivat HaHesder Tsfat</string>
    <string name="text_tos_url" translatable="false">https://yhtsfat.org.il/</string>
    <string name="text_privacy_policy_url" translatable="false">https://yhtsfat.org.il/</string>
    <string name="text_source_code_url" translatable="false">https://github.com/ElishaAz/YeshivatHahesderTsfat-Android/</string>

    <string name="text_facebook_username" translatable="false">itzfat</string>
    <string name="text_facebook_user_id" translatable="false">431771787016855</string>
    <string name="text_phone_number" translatable="false">046924646</string>

    <!-- Text -->
    <string name="text_comments">Comments</string>
    <string name="text_video_description">Published on %1$s \n\n%2$s</string>
    <string name="text_playlist_published_date">Published on %1$s</string>
    <string name="text_commenter_name_time">%1$s  \u2022  %2$s</string>
    <string name="text_commenter_name_time_edited">%1$s  \u2022  %2$s (edited)</string>
    <plurals name="text_playlist_video_count">
        <item quantity="one">%1$d Video</item>
        <item quantity="other">%1$d Videos</item>
    </plurals>
    <plurals name="text_playlist_audio_count">
        <item quantity="one">%1$d Lesson</item>
        <item quantity="other">%1$d Lessons</item>
    </plurals>
    <string name="text_share_playlist">Share Playlist</string>
    <string name="text_playlist_share_url" translatable="false">https://www.youtube.com/playlist?list=%1$s</string>
    <string name="text_share_video">Share Video</string>
    <string name="text_share_audio">Share Lesson</string>
    <string name="text_video_share_url" translatable="false">https://youtu.be/%1$s</string>
    <string name="text_youtube_channel_intent_url" translatable="false">https://www.youtube.com/channel/%1$s</string>
    <string name="text_replies">Replies</string>
    <string name="text_count_unavailable">-</string>
    <string name="text_channel_join_date">Joined %1$s</string>
    <string name="text_empty_favorites">No favorites yet. Tap on the heart icon while watching a video to add it to favorites.</string>
    <string name="text_subscribers">Subscribers</string>
    <string name="text_videos">Videos</string>
    <string name="text_views">Views</string>
    <string name="text_empty_comments">No comments found on this video</string>
    <string name="text_live_stream">Live Stream</string>

    <!-- Button -->
    <string name="btn_retry">Retry</string>
    <plurals name="btn_view_replies">
        <item quantity="one">View %1$d reply</item>
        <item quantity="other">View %1$d replies</item>
    </plurals>
    <string name="btn_subscribe">Subscribe</string>

    <!-- Error -->
    <string name="error_fetch_videos">Unable to fetch videos from channel</string>
    <string name="error_internet_connectivity">Please check your Internet connectivity and try again</string>
    <string name="error_load_more_videos">Error loading more videos</string>
    <string name="error_video_details">Error fetching video details. Please check your internet connectivity and try again.</string>
    <string name="error_fetch_comments">Error fetching comments</string>
    <string name="error_fetch_comment_replies">Error fetching comment replies</string>
    <string name="error_fetch_playlists">Error fetching playlists</string>
    <string name="error_search_empty_result_title">No results found</string>
    <string name="error_search_empty_result_desc">Try searching using a different keyword</string>
    <string name="error_channel_info">Error fetching channel info. Please try again.</string>
    <string name="text_empty_playlists">This channel doesn\'t have any playlists</string>

    <!-- Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_audio">Audio</string>
    <string name="menu_playlists">Playlists</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_about">About</string>
    <string name="menu_top_comments">Top Comments</string>
    <string name="menu_newest_first_comments">Newest First</string>
    <string name="menu_add_to_favorites">Add to favorites</string>
    <string name="menu_pip">Start \"Picture In Picture\" mode</string>
    <string name="menu_open_in_youtube">Open in Youtube</string>
    <string name="menu_open_in_browser">Open in browser</string>
    <string name="menu_share">Share</string>
    <string name="menu_details">Details</string>
    <string name="menu_search_videos">Search Videos</string>
    <string name="menu_rate_us">Rate app on Google Play</string>
    <string name="menu_feedback">Send us a feedback</string>
    <string name="menu_tos">Terms of Service</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_source_code">Source Code</string>
    <string name="menu_check_updae">Check for updates</string>

    <string name="menu_website">Website</string>
    <string name="menu_google_play">Google Play listing</string>
    <string name="menu_call">Call</string>
    <string name="menu_facebook">Facebook</string>
    <string name="menu_email">Email</string>

    <!-- Dialog -->
    <string name="dialog_theme_text_dark">Dark Theme</string>
    <string name="dialog_settings_title">Settings</string>
    <string name="menu_store">Store</string>
    <string name="menu_app_info">App Info</string>

    <!-- Fragment -->
    <string name="fragment_app_info">App Info</string>


    <string name="d_locale_override" translatable="false">locale_override</string>

    <string name="text_fetch_video_details_wait_msg">Please wait while video details are fetched</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="dialog_positive_button">OK</string>

    <string name="text_update_changelog_link" translatable="false">https://raw.githubusercontent.com/ElishaAz/YeshivatHahesderTsfat-Android/master/update-changelog.json</string>
    <string name="text_update_dismiss">Dismiss</string>
    <string name="text_update_ok">Update</string>
    <string name="text_update_available">New update available!</string>
    <string name="text_update_hide">Don\'t show again</string>
    <string name="text_update_unavailable">No new updates.</string>
    <string name="text_update_available_content">There is a new version available to download.</string>
    <string name="text_update_unavailable_content">There are no new versions available to download.</string>
    <string name="channel_name" translatable="false">Media Playback</string>
    <!--    <string name="channel_description">Media playback notifications</string>-->

    <!-- UAMP -->
    <string name="skip_back_10s">Skip back 10s</string>
    <string name="skip_forward_10s">Skip forward 10s</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="play_pause">Play / Pause</string>
    <string name="stop">Stop</string>

    <string name="duration_unknown">--:--</string>
    <string name="duration_format">%d:%02d</string>

    <string name="audio_share_url" translatable="false">https://drive.google.com/file/d/%1$s/view</string>
    <string name="audio_open_url" translatable="false">https://drive.google.com/file/d/%1$s/view</string>

    <!-- Settings -->
    <string name="menu_settings">Settings</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_locale_title">Language</string>
    <string name="settings_enter_pip_name">Enter PIP mode automatically</string>
    <string name="settings_enter_pip_summery">Enter \"Picture In Picture\" mode whenever the video is in the background</string>
</resources>
