<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/miOpenBabVideoDetails"
        android:icon="@drawable/ic_youtube"
        android:title="@string/menu_open_in_youtube"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/miFavoriteBabVideoDetails"
        android:icon="@drawable/ic_favorite_border"
        android:title="@string/menu_add_to_favorites"
        app:showAsAction="always" />

    <item
        android:id="@+id/miShareBabVideoDetails"
        android:icon="@drawable/ic_share"
        android:title="@string/menu_share"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
</menu>